Commit to save progress
Before making significant process changes to confirm process

--- a/views/view_docusign_connector.xml
+++ b/views/view_docusign_connector.xml
@@ -14,6 +14,22 @@
                     <attribute name="invisible">state != "completed"</attribute>
                 </xpath>
                 <xpath expr="//button[@name='send_docs']" position="replace"/>
+                <xpath expr="//field[@name='contact_id']" position="after">
+                    <field name="contract_management_id" readonly="1"/>
+                    <field name="contract_addendum_id" readonly="1"/>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="view_view_docusign_connector_tree_inherit" model="ir.ui.view">
+            <field name="name">docusign.connector.tree.inherit.contract.linkage</field>
+            <field name="model">docusign.connector</field>
+            <field name="inherit_id" ref="odoo_docusign.docusign_connector_res_partner_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//tree/field[@name='model']" position="after">
+                    <field name="contract_management_id"/>
+                    <field name="contract_addendum_id"/>
+                </xpath>
             </field>
         </record>
     </data>
